# opesci-fd

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  polly_install.sh  requirements.txt  setup.cfg  setup.py  travis-test.py
benchmarks/: README.md  prop_bench.py  prop_plot.py
cmake/: FindPAPI.cmake
codegen/: __init__.py  compile.py  demo.ipynb  demo_pochoir_convergent.ipynb  demo_prochoir.ipynb  demo_propagator.ipynb  demo_ref_convergent.ipynb  fdlib.py  grid.py  grid3d-read.ipynb  grid3d.ipynb  grid3d.py  grid_test.py  out.txt  refactor.ipynb  temp.cpp  temp.ipynb  test.cpp  test.py  tmp.ipynb
codegen/Benchmarking/: benchplot.py  pybench.py  test.h  test3d_new.cpp  wrapper.py
codegen/cx1/: opesci_likwid.pbs  test3d.cpp  test3d_ivdep.cpp  test3d_simd.cpp
codegen/local/: compile.py
codegen/src/: CMakeLists.txt
codegen/src/include/: opesciHandy.h  opesciIO.h
codegen/src/lib/: opesciIO.cpp
codegen/src/tests/: empty  test3d.cpp
codegen/templates/: common_include.txt  copyright.txt  io_include.txt  pochoir_bc.txt  pochoir_bc_2d.txt  pochoir_bc_3d.txt  pochoir_converge_tmpl.cpp  read_data.txt  ref_converge_tmpl.cpp  refract_tmpl.cpp  test_pochoir_iso_elastic_tmpl.cpp  test_ref_iso_elastic_tmpl.cpp  test_tmpl.cpp  tmpl1.c
codegen/templates/staggered/: generic_loop.txt  generic_loop_2d.txt  generic_loop_2d_2.txt  ghost_cell_3d.txt  ghost_stress_x.txt  ghost_stress_y.txt  ghost_velocity_x.txt  ghost_velocity_y.txt  init_loop_3d.txt  save_field.txt  staggered2d_tmpl.cpp  staggered3d_tmpl.cpp  time_stepping.txt  update_loop_2d.txt  update_loop_3d.txt
include/: opesciHandy.h  opesciIO.h  opesciProfiling.h
opesci/: __init__.py  _version.py  cgen_wrapper.py  codeprinter.py  compilation.py  derivative.py  fields.py  grid.py  grid_test.py  regulargrid.py  staggeredgrid.py  staggeredgrid.py~  util.py  variable.py
opesci/templates/: common_include.txt  copyright.txt  includes.py  pluto_include.txt  regular3d_tmpl.py  staggered3d_tmpl.py
opesci/templates/regular/: regular3d_tmpl.cpp
opesci/templates/staggered/: save_field.txt  staggered3d_tmpl.cpp
src/: opesciHandy.cpp  opesciIO.cpp  opesciProfiling.cpp  segy2vts.cpp
tests/: CMakeLists.txt  README.md  eigenwave.cpp  eigenwave3d-higher_order.ipynb  eigenwave3d-read.ipynb  eigenwave3d.ipynb  eigenwave3d.py  eigenwave3d_bench.py  eigenwave3d_plot.py  eigenwave_bench.py  eigenwave_plot.py  grid3d.py  llg.ipynb  pluto_plot.py  pluto_tile_test.py  polly_plot.py  polly_tile_test.py  simplewaveequation.py  stream_file.cpp  test_eigenwave3d.py
tests/cx1/: opesci_vtune.pbs
tests/local/: compile.py
tests/roofline/: roofline_plot.in  roofline_plot_comp.in  roofline_plot_solo.in  stream_file.c
tests/src/: CMakeLists.txt  ref_converge.cpp  test_pochoir_iso_elastic.cpp  test_ref_iso_elastic.cpp  test_segy2vts.cpp
tools/: pochoir_compiler.sh
